# todo-web-phase-2-GIAIC

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  README.md  backend_test.py  debug_registration.py  docker-compose.yml  main.py  netlify.toml  package-lock.json.bak  pyproject.toml  run_backend.py  run_backend_alt.py  run_backend_port8000.py  test_api_directly.py  test_backend_connection.js  test_db_connection.py  tmpclaude-45f3-cwd
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
backend/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_password_validation.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/middleware/: auth.py  performance.py
backend/src/models/: task.py  user.py
backend/src/routers/: auth.py  tasks.py
backend/src/schemas/: task.py  user.py
backend/src/services/: task_service.py  user_service.py
backend/src/utils/: security.py
backend/tests/contract/: test_auth.py  test_tasks.py
backend/tests/integration/: test_auth.py  test_tasks.py
backend/tests/unit/: test_auth.py  test_models.py
docker/: backend.Dockerfile  frontend.Dockerfile
docker/postgres/: init.sql
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js  test-tailwind.tsx  tmpclaude-d37e-cwd  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: StyledButton.tsx
frontend/lib/: api-client.ts  auth.tsx  types.ts
(+47 files in other folders)
